--- a/_config.yml
+++ b/_config.yml
@@ -17,9 +17,9 @@ minimal_mistakes_skin    : "dark" # "air", "aqua", "contrast", "dark", "dirt", "
 # Site Settings
 locale                   : "kr-KO"
 rtl                      : # true, false (default) # turns direction of the page into right to left for RTL languages
-title                    : "블로그그"
+title                    : "Kierwl의 개발블로그"
 title_separator          : "-"
-subtitle                 : # site tagline that appears below site title in masthead
+subtitle                 : "개발일지"
 name                     : "Kierwl"
 description              : "Website Test."
 url                      : "https://kierwl.github.io"
@@ -113,7 +113,7 @@ analytics:
 
 # Site Author
 author:
-  name             : "Your Name"
+  name             : "Kierwl"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "I am an **amazing** person."
   location         : "Somewhere"
