--- a/_config.yml
+++ b/_config.yml
@@ -229,7 +229,7 @@ sass:
 permalink: /:categories/:title/
 paginate : 8
 paginate_path: /page:num/
-timezone: # https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
+timezone: Asia/Seoul
 
 
 # Pagination with jekyll-paginate
