--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ email:
 description: >- # this means to ignore newlines until "baseurl:"
   Welcome Devlope Blog
 # baseurl: "/" # the subpath of your site, e.g. /blog
-url:https://kierwl.github.io/
+url:https://kierwl.github.io/:
 github_username: Kierwl
 highlighter: rouge
 svg:
